# yolov5-experiments

./: README.md  app.Dockerfile  azure-pipelines.yml  deployment.yaml  example-pipeline.yml  pipeline-structure.yml  pipeline-with-template.yml  pyproject.toml  requirements.txt  submit_inference_job.py
templates/: docker-build.yml
